--- a/projeto-teste/src/layout.fxml
+++ b/projeto-teste/src/layout.fxml
@@ -92,14 +92,14 @@
             <Font size="18.0" />
           </font>
         </Label>
-            <TextField layoutX="16.0" layoutY="33.0" prefHeight="25.0" prefWidth="206.0" promptText="Titulo da tarefa:">
+            <TextField fx:id="titulo_tarefa" layoutX="16.0" layoutY="33.0" prefHeight="25.0" prefWidth="206.0" promptText="Titulo da tarefa:">
                <font>
                   <Font name="Arial" size="12.0" />
                </font>
             </TextField>
-            <TextArea layoutX="15.0" layoutY="155.0" prefHeight="200.0" prefWidth="607.0" promptText="Descricao da tarefa:" />
-            <DatePicker layoutX="16.0" layoutY="77.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de inicio:" />
-            <DatePicker layoutX="16.0" layoutY="116.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de termino:" />
+            <TextArea fx:id="descricao" layoutX="15.0" layoutY="155.0" prefHeight="200.0" prefWidth="607.0" promptText="Descricao da tarefa:" />
+            <DatePicker fx:id="data_inicio" layoutX="16.0" layoutY="77.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de inicio:" />
+            <DatePicker fx:id="data_fim" layoutX="16.0" layoutY="116.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de termino:" />
       </children>
     </AnchorPane>
   </children>
