--- a/projeto-teste/src/layout.fxml
+++ b/projeto-teste/src/layout.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -97,9 +98,11 @@
                   <Font name="Arial" size="12.0" />
                </font>
             </TextField>
-            <TextArea fx:id="descricao" layoutX="15.0" layoutY="155.0" prefHeight="200.0" prefWidth="607.0" promptText="Descricao da tarefa:" />
-            <DatePicker fx:id="data_inicio" layoutX="16.0" layoutY="77.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de inicio:" />
+            <TextArea fx:id="descricao" layoutX="15.0" layoutY="155.0" prefHeight="165.0" prefWidth="607.0" promptText="Descricao da tarefa:" />
+            <DatePicker fx:id="data_inicio" layoutX="16.0" layoutY="73.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de inicio:" />
             <DatePicker fx:id="data_fim" layoutX="16.0" layoutY="116.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de termino:" />
+            <Button fx:id="enviar" layoutX="534.0" layoutY="328.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="84.0" text="Enviar" />
+            <Button fx:id="cancelar" layoutX="462.0" layoutY="336.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="65.0" text="Cancelar" />
       </children>
     </AnchorPane>
   </children>
