--- a/projeto-teste/src/layout.fxml
+++ b/projeto-teste/src/layout.fxml
@@ -41,6 +41,7 @@
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -103,6 +104,11 @@
             <DatePicker fx:id="data_fim" layoutX="16.0" layoutY="116.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de termino:" />
             <Button fx:id="enviar" layoutX="534.0" layoutY="328.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="84.0" text="Enviar" />
             <Button fx:id="cancelar" layoutX="462.0" layoutY="336.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="65.0" text="Cancelar" />
+            <ToolBar layoutX="353.0" layoutY="96.0" prefHeight="40.0" prefWidth="200.0">
+              <items>
+                <Button mnemonicParsing="false" text="Button" />
+              </items>
+            </ToolBar>
       </children>
     </AnchorPane>
   </children>
