--- a/projeto-teste/src/layout.fxml
+++ b/projeto-teste/src/layout.fxml
@@ -41,10 +41,11 @@
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PostItController">
   <children>
@@ -104,11 +105,12 @@
             <DatePicker fx:id="data_fim" layoutX="16.0" layoutY="116.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de termino:" />
             <Button fx:id="enviar" layoutX="534.0" layoutY="328.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="84.0" text="Enviar" />
             <Button fx:id="cancelar" layoutX="462.0" layoutY="336.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="65.0" text="Cancelar" />
-            <ToolBar layoutX="353.0" layoutY="96.0" prefHeight="40.0" prefWidth="200.0">
-              <items>
-                <Button mnemonicParsing="false" text="Button" />
-              </items>
-            </ToolBar>
+            <TextFlow layoutX="222.0" layoutY="16.0" prefHeight="200.0" prefWidth="200.0" />
+            <Text fx:id="status" layoutX="16.0" layoutY="349.0" opacity="0.58" strokeType="OUTSIDE" strokeWidth="0.0" text="Status" wrappingWidth="53.13671875">
+               <font>
+                  <Font name="Arial" size="15.0" />
+               </font>
+            </Text>
       </children>
     </AnchorPane>
   </children>
