--- a/projeto-teste/src/layout.fxml
+++ b/projeto-teste/src/layout.fxml
@@ -44,10 +44,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PostItController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PostItController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -103,14 +102,10 @@
             <TextArea fx:id="descricao" layoutX="15.0" layoutY="155.0" prefHeight="165.0" prefWidth="607.0" promptText="Descricao da tarefa:" />
             <DatePicker fx:id="data_inicio" layoutX="16.0" layoutY="73.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de inicio:" />
             <DatePicker fx:id="data_fim" layoutX="16.0" layoutY="116.0" prefHeight="25.0" prefWidth="206.0" promptText="Data de termino:" />
-            <Button fx:id="enviar" layoutX="534.0" layoutY="328.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="84.0" text="Enviar" />
-            <Button fx:id="cancelar" layoutX="462.0" layoutY="336.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="65.0" text="Cancelar" />
+            <Button fx:id="enviar" layoutX="534.0" layoutY="328.0" mnemonicParsing="false" onAction="#enviarAtividade" prefHeight="33.0" prefWidth="84.0" text="Enviar" />
+            <Button fx:id="cancelar" layoutX="462.0" layoutY="336.0" mnemonicParsing="false" onAction="#cancelarEnvio" prefHeight="25.0" prefWidth="65.0" text="Cancelar" />
             <TextFlow layoutX="222.0" layoutY="16.0" prefHeight="200.0" prefWidth="200.0" />
-            <Text fx:id="status" layoutX="16.0" layoutY="349.0" opacity="0.58" strokeType="OUTSIDE" strokeWidth="0.0" text="Status" wrappingWidth="53.13671875">
-               <font>
-                  <Font name="Arial" size="15.0" />
-               </font>
-            </Text>
+            <Label fx:id="status" layoutX="22.0" layoutY="336.0" text="Status" />
       </children>
     </AnchorPane>
   </children>
